src/test/ui/regions/regions-return-stack-allocated-vec.nll.stderr
error[E0714]: temporary value dropped while borrowed
  --> $DIR/regions-return-stack-allocated-vec.rs:14:6
   |
LL |     &[x] //~ ERROR borrowed value does not live long enough
   |      ^^^ creates a temporary which is freed while still in use
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0714`.
